# Dankgine

dankgine/: Cargo.toml
dankgine/src/core/: engine.rs  solver.rs
dankgine/src/geometry/: vector.rs  verlet.rs
