[package]
name = "dankgine"
version = "0.1.0"
edition = "2021"

[features]
default = ["parallel"]
simd = []
parallel = ["rayon"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dankgine"
path = "src/lib.rs"
crate-type = ["lib","cdylib"]

[dependencies]
wasm-bindgen = "0.2.80"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
lazy_static = "1.4.0"
rayon = { version = "1.5.3", optional = true }

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
harness = false
name = "ten_updates"
